maybe fix some layout issues we'll see

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -67,7 +67,8 @@ h1.nice {
 
 section.more {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 24rem);
+    grid-template-columns: repeat(auto-fit, min(24rem, 100vw));
+    gap: 1rem;
     justify-content: space-evenly;
 
     position: relative;
@@ -118,7 +119,8 @@ ul.links {
 
     a {
         text-decoration: none;
-        width: max-content;
+        width: fit-content;
+    text-wrap: wrap;
 
         &::after {
             content: ' →';
