--- a/assets/main.css
+++ b/assets/main.css
@@ -11,6 +11,10 @@
     color: var(--bg);
 }
 
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     padding: 0;
